fix to panel columns for better mapping

--- a/templates/viewer_template.html
+++ b/templates/viewer_template.html
@@ -57,12 +57,12 @@
         <script>
 
             function openPanel() {                  
-                document.getElementById("ms-panel").setAttribute("class", "col")
-                document.getElementById("panel-1").setAttribute("class", "col")
-                document.getElementById("panel-2").setAttribute("class", "col")
-                document.getElementById("ms-label-row").setAttribute("class", "col pt-2")
-                document.getElementById("panel-1-label-row").setAttribute("class", "col")
-                document.getElementById("panel-2-label-row").setAttribute("class", "col")
+                document.getElementById("ms-panel").setAttribute("class", "col-4")
+                document.getElementById("panel-1").setAttribute("class", "col-4")
+                document.getElementById("panel-2").setAttribute("class", "col-4")
+                document.getElementById("ms-label-row").setAttribute("class", "col-4 pt-2")
+                document.getElementById("panel-1-label-row").setAttribute("class", "col-4")
+                document.getElementById("panel-2-label-row").setAttribute("class", "col-4")
                 document.getElementById("open-button").classList.toggle("d-none")
                 document.getElementById("close-button").classList.toggle("d-none")
                 localStorage['panelOpen'] = true
