adapted layout to use cards for clusters and modified js to create cards for each cluster

--- a/Maqrizi.ItticazHunafa-fitna-2-7/assets/main-styles.css
+++ b/Maqrizi.ItticazHunafa-fitna-2-7/assets/main-styles.css
@@ -60,3 +60,11 @@ mark.poetryMark {
 .bi {
     font-size: 22px
 }
+
+.bi.bi-1-square {
+    font-size: 15px;
+}
+
+.bi.bi-2-square {
+    font-size: 515px;
+}
