--- a/templates/assets/main-styles.css
+++ b/templates/assets/main-styles.css
@@ -19,25 +19,36 @@
 mark.markHead {                
     background-color: rgb(172, 114, 6); 
     color: rgb(247, 244, 244);
+    padding: 0;
+    display: inline-block;
+    font-size: 35px;
 }
 
 mark.ms {
     background-color: rgb(0, 60, 255);
     color: rgb(247, 244, 244);
+    padding: 0;
+    display: inline-block;    
     }
 
 mark.pageno {
     background-color: rgb(96, 116, 182);
+    padding: 0;
+    display: inline-block;
     }
 
 mark.a0 {
-color: black;
-padding: 5px;
-background: greenyellow;
+    color: black;
+    padding: 5px;
+    background: greenyellow;
+    padding: 0;
+    display: inline-block;
 }
 
 mark.clusterStart {
     background: lightseagreen;
+    padding: 0;
+    display: inline-block;
 }
 
 mark.clusterEnd {
@@ -46,6 +57,8 @@ mark.clusterEnd {
 
 mark.poetryMark {
     background: lightblue;
+    padding: 0;
+    display: inline-block;
 }
 
 
