--- a/Maqrizi.ItticazHunafa-fitna-2-7/assets/main-styles.css
+++ b/Maqrizi.ItticazHunafa-fitna-2-7/assets/main-styles.css
@@ -24,28 +24,40 @@ mark.markHead {
 mark.ms {
     background-color: rgb(0, 60, 255);
     color: rgb(247, 244, 244);
+    padding: 0;
+    display: inline-block;
     }
 
 mark.pageno {
     background-color: rgb(96, 116, 182);
+    padding: 0;
+    display: inline-block;
     }
 
 mark.a0 {
-color: black;
-padding: 5px;
-background: greenyellow;
+    color: black;
+    padding: 5px;
+    background: greenyellow;
+    padding: 0;
+    display: inline-block;
 }
 
 mark.clusterStart {
     background: lightseagreen;
+    padding: 0;
+    display: inline-block;
 }
 
 mark.clusterEnd {
     background: lightcoral;
+    padding: 0;
+    display: inline-block;
 }
 
 mark.poetryMark {
     background: lightblue;
+    padding: 0;
+    display: inline-block;
 }
 
 
